; ── Shared benchmark framework ──

(library
 (name bench_lib)
 (modules bench_lib)
 (libraries unix fmt))

; ── Optional C tier (select: c_stubs when available, else stubs returning None) ──

(library
 (name c_tier)
 (modules c_tier)
 (libraries
  (select
   c_tier.ml
   from
   (c_stubs -> c_tier.everparse.ml)
   (-> c_tier.none.ml))))

; ── EverParse benchmark infrastructure (BUILD_EVERPARSE=1 only) ──

; Step 1: Generator — produces .3d files, runs EverParse, generates C/ML stubs

(executable
 (name gen_stubs)
 (modules gen_stubs)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries
  demo_bench_cases
  demo
  space
  net
  wire
  wire.3d
  wire.stubs
  bench_lib
  unix))

; Step 2: Run the generator to produce all artifacts

(rule
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (targets
  (dir schemas)
  c_stubs.c
  c_stubs.ml)
 (deps gen_stubs.exe)
 (action
  (run ./gen_stubs.exe schemas)))

; Step 3: C stubs library (EverParse validation + timed loops + OCaml externals)

(library
 (name c_stubs)
 (modules c_stubs)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names c_stubs)
  (extra_deps
   (glob_files schemas/*.c)
   (glob_files schemas/*.h))
  (flags :standard -I schemas)))
