; -- Shared benchmark framework --

(library
 (name bench_lib)
 (modules bench_lib)
 (libraries unix fmt))

; -- Optional C tier (select: c_stubs when available, else stubs returning None) --

(library
 (name c_tier)
 (modules c_tier)
 (libraries
  (select
   c_tier.ml
   from
   (c_stubs -> c_tier.everparse.ml)
   (-> c_tier.none.ml))))

; -- EverParse benchmark infrastructure --

; Generator -- pure OCaml, always builds

(executable
 (name gen_stubs)
 (modules gen_stubs)
 (libraries
  demo_bench_cases
  demo
  space
  net
  wire
  wire.3d
  wire.stubs
  bench_lib
  unix))

; Generate c_stubs.ml (OCaml external declarations) -- always

(rule
 (target c_stubs.ml)
 (deps gen_stubs.exe)
 (action
  (with-stdout-to
   %{target}
   (run ./gen_stubs.exe --ml-only))))

; Generate .3d files, run EverParse, produce C code -- gated

(rule
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (targets
  (dir schemas)
  c_stubs.c)
 (deps gen_stubs.exe)
 (action
  (run ./gen_stubs.exe schemas)))

; OCaml stubs library -- always builds (externals resolved at link time)

(library
 (name c_stubs)
 (modules c_stubs))

; C foreign stubs -- gated (provides the C implementations for c_stubs externals)

(library
 (name c_stubs_c)
 (modules)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names c_stubs)
  (extra_deps
   (glob_files schemas/*.c)
   (glob_files schemas/*.h))
  (flags :standard -I schemas -I ../lib/stubs)))
