(library
 (name crowbar_util)
 (modules crowbar_util)
 (libraries crowbar))

(executable
 (name fuzz)
 (modules fuzz fuzz_wire)
 (libraries wire crowbar crowbar_util))

(executable
 (name gen_corpus)
 (modules gen_corpus)
 (libraries unix fmt))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (deps fuzz.exe)
 (action
  (run %{exe:fuzz.exe})))

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (deps
  (source_tree corpus)
  fuzz.exe
  gen_corpus.exe)
 (action
  (echo "AFL fuzzer built: %{exe:fuzz.exe}\n")))
