(executable
 (name fuzz)
 (modules fuzz fuzz_wire fuzz_c fuzz_param)
 (libraries wire alcobar))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (deps fuzz.exe)
 (action
  (run %{exe:fuzz.exe})))

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (deps
  (source_tree corpus)
  fuzz.exe)
 (action
  (echo "AFL fuzzer built: %{exe:fuzz.exe}\n")))
