(executable
 (name fuzz)
 (libraries wire alcobar))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (deps fuzz.exe)
 (action
  (run %{exe:fuzz.exe})))

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (deps fuzz.exe)
 (action
  (progn
   (run %{exe:fuzz.exe} --gen-corpus corpus)
   (echo "AFL fuzzer built: %{exe:fuzz.exe}\n"))))
