(test
 (name test)
 (libraries wire alcotest re))

(executable
 (name gen_3d)
 (modules gen_3d)
 (libraries wire))

; EverParse integration tests
; First generate .3d files, then run EverParse on them

(rule
 (targets Bitfields.3d Enumerations.3d FieldDependence.3d)
 (deps gen_3d.exe)
 (action
  (run ./gen_3d.exe)))

; EverParse 3D validation - runs 3d on generated .3d files
; Requires 3d to be in PATH (e.g., via ~/.local/bin/3d)

(rule
 (alias 3d)
 (deps Bitfields.3d Enumerations.3d FieldDependence.3d)
 (action
  (bash
   "~/.local/everparse/bin/3d.exe --version && for f in *.3d; do ~/.local/everparse/bin/3d.exe --batch \"$f\" || exit 1; done")))

; Note: C code generation for differential testing is in the diff/ directory
