(library
 (name clcw_bench)
 (modules clcw_bench)
 (libraries space wire bench_lib c_tier c_stubs memtrace unix fmt))

(library
 (name clcw_bench_c)
 (modules)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names clcw_c)
  (extra_deps
   (glob_files ../schemas/*.c)
   (glob_files ../schemas/*.h))
  (flags :standard -I .. -I ../schemas -I ../../lib/stubs)))

(executable
 (name bench)
 (modules bench)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries clcw_bench clcw_bench_c c_stubs_c wire.stubs))
