(library
 (name gateway_bench)
 (modules gateway_bench)
 (libraries space wire bench_lib c_tier c_stubs memtrace unix fmt))

(library
 (name gateway_bench_c)
 (modules)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names gateway_c)
  (extra_deps
   (glob_files ../schemas/*.c)
   (glob_files ../schemas/*.h))
  (flags :standard -I ../schemas -I ../../lib/stubs)))

(executable
 (name bench)
 (modules bench)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries gateway_bench gateway_bench_c))
