; ── EverParse benchmark infrastructure (BUILD_EVERPARSE=1 only) ──

; Step 1: Generator — produces .3d files, runs EverParse, generates C/ML stubs

(executable
 (name gen_stubs)
 (modules gen_stubs)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries net wire wire.c unix))

; Step 2: Run the generator to produce all artifacts

(rule
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (targets
  (dir ep_tcpip)
  tcpip_ep_stubs.c
  tcpip_ep_stubs.ml
  tcpip_ep_dispatch.ml)
 (deps gen_stubs.exe)
 (action
  (run ./gen_stubs.exe ep_tcpip)))

; Step 3: EverParse stubs library (C validation + timed loops + OCaml externals)

(library
 (name tcpip_ep_stubs)
 (modules tcpip_ep_stubs)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names tcpip_ep_stubs)
  (flags :standard -I ep_tcpip)))

; Step 4: Dispatch module (generated, maps names to functions)

(library
 (name tcpip_ep_dispatch)
 (modules tcpip_ep_dispatch)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries tcpip_ep_stubs))

; Step 5: Performance benchmark — EverParse C vs OCaml Codec vs FFI

(executable
 (name bench)
 (modules bench)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries net tcpip_ep_dispatch wire unix))
