(executable
 (name gen_3d)
 (libraries wire))

(rule
 (targets Bitfields.3d Enumerations.3d FieldDependence.3d)
 (deps gen_3d.exe)
 (action
  (run ./gen_3d.exe)))

; EverParse 3D validation

(rule
 (alias 3d)
 (deps Bitfields.3d Enumerations.3d FieldDependence.3d)
 (action
  (bash
   "~/.local/everparse/bin/3d.exe --version && for f in *.3d; do ~/.local/everparse/bin/3d.exe --batch \"$f\" || exit 1; done")))
