(test
 (name test)
 (modules test test_bench_lib test_demo_bench_cases)
 (libraries bench_lib demo_bench_cases alcotest unix))

(executable
 (name bench)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries
  bench_lib
  routing_bench
  routing_bench_c
  clcw_bench
  clcw_bench_c
  gateway_bench
  gateway_bench_c
  alcotest
  unix))

(rule
 (alias runtest)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (deps bench.exe)
 (action
  (run ./bench.exe)))
