; Differential testing: OCaml wire vs EverParse C parsers
;
; Workflow:
; 1. gen_c generates random schemas as .3d files
; 2. EverParse 3d generates C parsers from .3d files
; 3. Test runner generates random bytes, runs both parsers, diffs results

; Schema library for differential testing

(library
 (name schema)
 (modules schema)
 (libraries wire))

; Generate .3d files from OCaml schemas

(executable
 (name gen_schemas)
 (modules gen_schemas)
 (libraries schema))

(rule
 (targets SimpleHeader.3d ConstrainedPacket.3d)
 (deps gen_schemas.exe)
 (action
  (run ./gen_schemas.exe)))

; Generate .3d files from random schemas into schemas/ directory
; Also generates stubs.c, stubs.ml, diff_test.ml and schemas/dune

(executable
 (name gen_c)
 (modules gen_c)
 (libraries wire unix))

(rule
 (targets
  (dir schemas)
  stubs.c
  stubs.ml
  diff_test.ml)
 (deps gen_c.exe)
 (action
  (run ./gen_c.exe schemas 100)))

; Differential test: compile C stubs (includes EverParse generated C)
; stubs.c #includes the C files from schemas/

(library
 (name stubs)
 (modules stubs)
 (foreign_stubs
  (language c)
  (names stubs)
  (flags :standard -I schemas)))

(executable
 (name diff_test)
 (modules diff_test)
 (libraries stubs))

(rule
 (alias diff)
 (deps diff_test.exe)
 (action
  (run ./diff_test.exe)))

; Fuzz tests for schemas (OCaml only - no C dependency)

(executable
 (name fuzz_schema)
 (modules fuzz_schema)
 (libraries schema crowbar))

(rule
 (alias fuzz)
 (deps fuzz_schema.exe)
 (action
  (run %{exe:fuzz_schema.exe})))
