; Differential testing: OCaml wire vs EverParse C parsers
;
; Workflow:
; 1. BUILD_EVERPARSE=1 dune build @ocaml-wire/test/diff/gen_c
;    (generates .3d schemas, runs EverParse, produces C stubs)
; 2. BUILD_EVERPARSE=1 dune build @ocaml-wire/test/diff/diff
;    (runs differential tests)
;
; EverParse is slow, so code generation only runs when BUILD_EVERPARSE=1.
; Generated C code can be promoted and committed for C API consumers.

; Schema library for differential testing

(library
 (name schema)
 (modules schema)
 (libraries wire))

; Generate .3d files from OCaml schemas

(executable
 (name gen_schemas)
 (modules gen_schemas)
 (libraries schema))

(rule
 (alias gen_schemas)
 (targets SimpleHeader.3d ConstrainedPacket.3d)
 (deps gen_schemas.exe)
 (action
  (run ./gen_schemas.exe)))

; Generate random schemas into schemas/ directory
; Also generates stubs.c, stubs.ml, diff_test.ml
;
; Run with: BUILD_EVERPARSE=1 dune build @ocaml-wire/test/diff/gen_c

(executable
 (name gen_c)
 (modules gen_c)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries wire wire.c unix))

(rule
 (alias gen_c)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (targets
  (dir schemas)
  stubs.c
  stubs.ml
  diff_test.ml)
 (deps gen_c.exe)
 (action
  (run ./gen_c.exe schemas 100)))

; Differential test: compile C stubs (includes EverParse generated C)
; NOTE: Only builds with BUILD_EVERPARSE=1 after running @gen_c first

(library
 (name stubs)
 (modules stubs)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (foreign_stubs
  (language c)
  (names stubs)
  (flags :standard -I schemas)))

(executable
 (name diff_test)
 (modules diff_test)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (libraries stubs))

(rule
 (alias diff)
 (enabled_if
  (= %{env:BUILD_EVERPARSE=} "1"))
 (deps diff_test.exe)
 (action
  (run ./diff_test.exe)))

; Fuzz tests for schemas (OCaml only - no C dependency)

(executable
 (name fuzz_schema)
 (modules fuzz_schema)
 (libraries schema crowbar crowbar_util))

(rule
 (alias fuzz)
 (deps fuzz_schema.exe)
 (action
  (run %{exe:fuzz_schema.exe})))
